# strongswan

src/libstrongswan/plugins/newhope/: Makefile.am  newhope_ke.c  newhope_ke.h
